force-app/main/default/objects/HONORS_AWARDS_RECOGNITION__c/HONORS_AWARDS_RECOGNITION__c.object-meta.xml
<CustomObject>
    <label>HONORS / AWARDS / RECOGNITION</label>
    <nameField>
        <label>Award Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HONORS / AWARDS / RECOGNITION</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>