force-app/main/default/objects/HONORS_AWARDS_RECOGNITION__c/fields/AwardNotes__c.field-meta.xml
<CustomField>
    <fullName>AwardNotes__c</fullName>
    <inlineHelpText>Please key in any additional details related to award.</inlineHelpText>
    <label>Award Notes</label>
    <type>TextArea</type>
</CustomField>