force-app/main/default/objects/HONORS_AWARDS_RECOGNITION__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HONORS / AWARDS / RECOGNITION</relationshipLabel>
    <relationshipName>HONORS_AWARDS_RECOGNITION</relationshipName>
    <type>Lookup</type>
</CustomField>