force-app/main/default/objects/HONORS_AWARDS_RECOGNITION__c/fields/Nameoforganizationgivingtheaward__c.field-meta.xml
<CustomField>
    <fullName>Nameoforganizationgivingtheaward__c</fullName>
    <inlineHelpText>Please mention the name of the organization from where you have received the award.</inlineHelpText>
    <label>Name of organization giving the award</label>
    <length>70</length>
    <type>Text</type>
</CustomField>