force-app/main/default/objects/HONORS_AWARDS_RECOGNITION__c/fields/OrganizationNotes__c.field-meta.xml
<CustomField>
    <fullName>OrganizationNotes__c</fullName>
    <description>Please key in any additional details, if required.</description>
    <label>Organization Notes</label>
    <type>TextArea</type>
</CustomField>