force-app/main/default/objects/HONORS_AWARDS_RECOGNITION__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>Please mention the year of HONORS / AWARDS / RECOGNITION.</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>